# Project2.Collection-of-aircraft-data-in-the-airspace

./: README.md  main.py  pyproject.toml
data/: aeroplanes.json  aeroplanes_20260717_190947.json  aeroplanes_20260717_191028.json  aeroplanes_20260717_191136.json  aeroplanes_20260717_191347.json  aeroplanes_20260717_191615.json  aeroplanes_20260717_191749.json  aeroplanes_20260717_191847.json
docs/: README.md
htmlcov/: index.html
src/: __init__.py
src/api/: __init__.py  base.py  nominatim.py  opensky.py
src/models/: __init__.py  aeroplane.py
src/storage/: __init__.py  base.py  json_saver.py
src/utils/: __init__.py  data_processing.py  user_interaction.py
tests/: conftest.py  test_aeroplane.py  test_aeroplane_extended.py  test_api_base.py  test_api_nominatim.py  test_api_nominatim_extended.py  test_api_opensky.py  test_data_processing.py  test_storage_json_saver.py  test_storage_json_saver_coverage.py  test_storage_json_saver_extended.py  test_user_interaction.py  test_user_interaction_coverage.py  test_user_interaction_extended.py
